--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: RODBCext
-Version: 0.2.4
+Version: 0.2.5
 Authors@R: c(person("Mateusz", "Zoltak", role = c("aut", "cre"),
     email = "zozlak@zozlak.org"),
     person("Brian", "Ripley", role = c("aut")),
     person("Michael", "Lapsley", role = "aut"))
 Title: Parameterized queries extension for RODBC
 Description: An extension for RODBC package adding support for parameterized
-    queries
+    queries.
 SystemRequirements: An ODBC3 driver manager and drivers.
 Depends:
     R (>= 3.0.0),
