--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Authors@R: c(person("Mateusz", "Zoltak", role = c("aut", "cre"),
     email = "zozlak@zozlak.org"),
     person("Brian", "Ripley", role = c("aut")),
     person("Michael", "Lapsley", role = "aut"))
-Title: Parameterized queries extension for RODBC
+Title: Parameterized Queries Extension for RODBC
 Description: An extension for RODBC package adding support for parameterized
     queries.
 SystemRequirements: An ODBC3 driver manager and drivers.
