--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 # http://docs.travis-ci.com/user/languages/r/
 language: r
 
-sudo: required
+cache: packages
+
+r:
+  - release
+  - devel
 
 apt_packages:
   - unixodbc-dev
