--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,3 +23,4 @@ Author: Mateusz Zoltak [aut, cre],
 Maintainer: Mateusz Zoltak <zozlak@zozlak.org>
 NeedsCompilation: yes
 VignetteBuilder: knitr
+RoxygenNote: 5.0.1
