--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: RODBCext
-Version: 0.2.7
-Authors@R: c(person("Mateusz", "Zoltak", role = c("aut", "cre"),
-    email = "zozlak@zozlak.org"),
+Version: 0.3.0
+Authors@R: c(
+    person("Mateusz", "Zoltak", role = c("aut", "cre"), email = "zozlak@zozlak.org"),
     person("Brian", "Ripley", role = "aut"),
     person("Michael", "Lapsley", role = "aut"),
-    person("Will", "Beasley", role = "ctb",
-    email = "wibeasley@hotmail.com"))
+    person("Will", "Beasley", role = "ctb", email = "wibeasley@hotmail.com"),
+    person("Juergen", "Altfeld", role = "ctb")
+  )
 Title: Parameterized Queries Extension for RODBC
 Description: An extension for RODBC package adding support for parameterized
     queries.
@@ -15,7 +16,8 @@ Depends:
     RODBC (>= 1.3.0)
 Suggests:
     knitr,
-    rmarkdown
+    rmarkdown,
+    testthat
 LazyLoad: yes
 Biarch: yes
 License: GPL-2 | GPL-3
@@ -26,4 +28,4 @@ Author: Mateusz Zoltak [aut, cre],
 Maintainer: Mateusz Zoltak <zozlak@zozlak.org>
 NeedsCompilation: yes
 VignetteBuilder: knitr
-RoxygenNote: 5.0.1
+RoxygenNote: 6.0.1
